# newsMaker

./: .env  Dockerfile  QUICKSTART.md  README.md  docker-compose.yml  pyproject.toml  run_dev_server.py
config/: youtube_client_secret.json.example
scripts/: run_development.py  run_simple_server.py  setup_knowledge_bases.py  show_project_info.py  test_basic.py  test_elevenlabs.py
src/kannada_news_automation/: __init__.py  main.py  pipeline.py
src/kannada_news_automation/agents/: audio_generator.py  content_processor.py  news_collector.py  translator.py  video_assembler.py  visual_content.py  youtube_uploader.py
src/kannada_news_automation/config/: settings.py
tests/: test_pipeline.py
